# sfx_daw

./: Cargo.toml  LICENSE.txt  README.md
src/: filter.rs  load.rs  main.rs  player.rs  track.rs
src/shaders/: test.wgsl
