[package]
name = "sfx_daw"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15.3"
symphonia = { version = "0.5.4", features = ["opt-simd", "all-formats", "all-codecs"] }
rubato = "0.16.2"
rustfft = "6.2.0"
winit = "0.30.9"
# env_logger = "0.11.8"
futures-lite = "2.6.0"
wgpu = { version = "24.0.3", default-features = false, features = ["wgsl"] }

[patch.crates-io]
cpal = { path = "../cpal"}
